# llmsys_s24_hw1

./: README.md  compile_cuda.sh  dockerfile  requirements.txt  setup.cfg
minitorch/: __init__.py  autodiff.py  cuda_kernel_ops.py  nn.py  operators.py  optim.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py  testing.py
minitorch.egg-info/: SOURCES.txt
project/: run_sentiment.py
src/: combine.cu
tests/: test_neural_network.py  test_tensor_autodiff.py  test_tensor_general.py
