[metadata]
name=minitorch
version=0.4

[files]
packages =
    minitorch
    mt_diagrams
[darglint]
ignore_regex=((^_(.*))|(.*map)|(.*zip)|(.*reduce)|(test.*)|(tensor_.*))
docstring_style=google
strictness=long

[flake8]
ignore = N801, E203, E266, E501, W503, F812, E741, N803, N802, N806
exclude = .git,__pycache__,docs/slides/*,old,build,dist

[isort]
profile=black
src_paths=minitorch,test

[mypy]
strict = True
ignore_missing_imports = True
exclude=^(docs/)|(project/)|(assignments/)
implicit_reexport = True

[mypy-tests.*]
disallow_untyped_decorators = False
implicit_reexport = True

[black]
exclude=^(docs/)|(project/)|(assignments/)

[tool:pytest]
markers =
        task1_1
        task1_2
        task1_3
        task1_4
